[package]
name = "eedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
argon_hash_password = "0.1.2"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rpassword = "7.3.1"
scrawl = "2.0.0"
zeroize = "1.7.0"
